css/mobile.css
@media (max-device-width: 900px) {
  /* ====== general ====== */
  .purple-shadow {
    -webkit-box-shadow: 0vw 2.5vw 0vw 0vw rgba(219, 208, 231, 1);
    -moz-box-shadow: 0vw 2.5vw 0vw 0vw rgba(219, 208, 231, 1);
    box-shadow: 0vw 2.5vw 0pvw 0vw rgba(219, 208, 231, 1);
  }

  .yellow-shadow {
    -webkit-box-shadow: 0px 2.5vw 0px 0px #ffe2a9;
    -moz-box-shadow: 0px 2.5vw 0px 0px #ffe2a9;
    box-shadow: 0px 2.5vw 0px 0px #ffe2a9;
  }

  .green-shadow {
    -webkit-box-shadow: 0px 2.5vw 0px 0px #c4d3b5;
    -moz-box-shadow: 0px 2.5vw 0px 0px #c4d3b5;
    box-shadow: 0px 2.5vw 0px 0px #c4d3b5;
  }

  /* ====== navigation panel ====== */

  .nav-wraper {
    width: 100%;
    height: 12.5vw;
    padding: 0px 10vw;
  }

  .nav__logo {
    width: 33vw;
  }

  .nav__button {
    font-size: 4vw;
    padding: 2vw 2vw;
    border-radius: 5vw;
  }

  /* ====== header ====== */

  .header-wrapper {
    max-width: 100%;
    padding: 0vw;
  }

  .header__upper {
    max-width: 100%;
    min-width: 0vw;
    margin-top: 8vw;
  }

  .header__upper-title-str {
    line-height: 8vw;
  }

  .header__upper-title-str:nth-child(1) {
    font-size: 10vw;
  }

  .header__upper-title-str:nth-child(2) {
    font-size: 8vw;
  }

  .header__upper-title-str:nth-child(3) {
    font-size: 3.5vw;
  }

  .header__lower {
    display: none;
  }

  /* ====== section differ ====== */

  .section-differ__list {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: start;
    max-width: 100%;
    padding: 0vw 3vw;
    min-width: 0vw;
    gap: 7vw;
    margin: 2.5vw 0vw;
    gap: 5vw;
    padding-bottom: 2vw;
  }

  .section-differ__list-card:nth-child(2n) {
    align-self: end;
  }

  .section-differ__list-card {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    /* flex: 1 0 100%; */
    min-height: 22.5vw;
    padding: 3.5vw;
    width: 85%;
    border-radius: 5vw;
  }

  .section-differ__list-card-list-el {
    font-size: 3vw;
    display: flex;
    flex-wrap: wrap;
  }

  .section-differ__list-card:nth-child(1) > img {
    width: 40vw;
    align-self: center;
    margin-top: 0px;
  }

  .section-differ__list-card:nth-child(2) > img {
    width: 20vw;
    align-self: center;
    margin-left: 4vw;
    margin-top: 0;
    margin-bottom: 0;
  }

  .section-differ__list-card:nth-child(3) > img {
    width: 25vw;
    align-self: center;
    margin-top: 0;
  }

  .section-differ__list-card:nth-child(4) > img {
    width: 18vw;
    align-self: center;
  }

  .section-differ__list-card:nth-child(2),
  .section-differ__list-card:nth-child(4) {
    flex-direction: row-reverse;
  }

  /* ====== section supervisor ====== */

  .section__supervisor {
    width: 100%;
    min-height: 100%;
    margin-top: 8vw;
    padding-bottom: 20vw;
  }

  .section__supervisor-title {
    width: 100%;
    min-width: 100%;
    padding: 10vw 5vw;
  }

  .section__supervisor-title-str {
    font-size: 10vw;
    text-align: center;
  }

  .section__supervisor-title-str:nth-child(2) {
    font-size: 4vw;
    margin-top: 4vw;
    letter-spacing: 1.75vw;
  }

  .section__supervisor-books {
    display: none;
  }

  .section__supervisor-wrapper {
    width: 100%;
    min-width: 100%;
    padding: 0;
  }

  .section__supervisor-content {
    width: 90%;
    min-width: 90%;
    min-height: 100%;
    gap: 2vw;
    margin-right: 0;
  }

  .section__supervisor-content-card {
    width: 100%;
    min-height: 100%;
    padding-left: 4vw;
    border-radius: 3vw;
    padding-right: 2vw;
  }

  .section__supervisor-content-card-logo {
    min-width: 30vw;
    margin-left: 2vw;
  }

  .section__supervisor-content-card-text {
    font-size: 3vw;
    padding: 2vw 1vw;
  }

  /* ====== section feedback ====== */

  .section-feedback {
    min-width: 100%;
    min-height: 100%;
    padding-bottom: 20vw;
  }
  .section-feedback-wrapper {
    gap: 10vw 0;
    padding: 2vw 4vw;
  }
  .section-feedback__title {
    min-width: 100%;
    text-align: center;
    font-size: 10vw;
    flex-wrap: wrap;
    padding: 6vw 0 4vw 0;
  }
  .section-feedback__card,
  .section-feedback__card:nth-child(2n) {
    width: 100%;
    min-width: 100%;
    height: 100%;
    min-height: 100%;
    flex-direction: column;
    gap: 4vw 0;
    max-height: 100%;
  }
  .section-feedback__card-left {
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
  }
  .section-feedback__card:nth-child(2n) > .section-feedback__card-left {
    flex-direction: row-reverse;
  }
  .section-feedback__card-left-photo {
    width: 10vw;
    min-width: 45%;
  }
  .section-feedback__card-description {
    font-size: 3vw;
    padding: 4vw;
  }
  .section-feedback__card-description-wrapper {
    border-radius: 6vw;
  }
  .section-feedback__card-left-text {
    font-size: 5vw;
    margin-left: 5vw;
    width: 100%;
    text-align: center;
  }

  /* ====== section course ====== */
  .section-course__list {
    min-width: 100%;
    gap: 8vw 0vw;
    padding: 0vw 2vw;
  }
  .section-course-wrapper {
    width: 100%;
    min-width: 100%;
  }
  .section-course__list-card {
    min-width: 100%;
    min-height: 100%;
    padding: 6vw;
    gap: 5vw 0vw;
    border-radius: 8vw;
  }
  .section-course__list-card-footer-buttons {
    flex-direction: column;
    gap: 3vw 0vw;
  }
  .section-course__list-card-description-el {
    font-size: 3.25vw;
  }
  .section-course__list-card-header-left-str-title {
    font-size: 7vw;
  }
  .section-course__list-card-header-left-str-subtitle {
    font-size: 5vw;
  }
  .section-course__list-card-header-left-str-hashtag {
    font-size: 2.5vw;
    padding: 1vw 2vw;
    margin-left: 2vw;
  }
  .section-course__list-card-footer-buttons > button {
    font-size: 3.5vw;
    padding: 1.75vw 4vw;
    border-radius: 6vw;
    border: 0.75vw solid #663399;
  }
  .section-course__list-card-footer-price {
    font-size: 4vw;
  }
  .section-course__list-card-footer-price > span {
    font-size: 6vw;
  }
  .section-course__list-card-footer-soon > p {
    font-size: 7vw;
  }
  .section-course__list-card-footer-free > p {
    font-size: 5vw;
  }

  #lectory-icon {
    width: 40vw;
  }

  #puzzle-icon {
    width: 15vw;
  }
  .section-course {
    padding: 12.5vw 2vw;
  }
  .section-course__list-card-header-icon {
    width: 25vw;
  }
  .section-course__list-card:nth-child(2)
    > .section-course__list-card-header
    > .section-course__list-card-header-left
    > .section-course__list-card-header-left-str
    > .section-course__list-card-header-left-str-title {
    font-size: 10vw;
  }
  .section-course__title {
    font-size: 10vw;
    min-width: 100%;
    padding-bottom: 7.5vw;
  }
  #green-button-more {
    border: 0.75vw solid #9fc478;
  }
  .section-course__list-card:nth-child(2)
    > .section-course__list-card-header
    > .section-course__list-card-header-left
    > .section-course__list-card-header-left-str
    > .section-course__list-card-header-left-str-title {
    font-size: 7vw;
  }
  .section-course__list-card-description-el > span {
    padding-right: 1vw;
  }
}

